--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -53,28 +53,28 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="one-half">
                 <div class="tab-content">
                     <div id="tab1" class="tab active">
-                        <img src="img/wireframing.png" alt="Wire Framing">
+                        <img src="/img/wireframing.png" alt="Wire Framing">
                         <h2>Sitemap and wireframe creation</h2>
                         <p>With the scope of work well-defined, we can move onto wireframing the structural level of your website, defining how the content and features defined in scope definition will interrelate.</p>
 
                         <p>This helps me with the development process to establish the basic structure of a page before moving onto visual design.  </p>
                     </div>
                     <div id="tab2" class="tab">
-                        <img src="img/design.png" alt="Design">
+                        <img src="/img/design.png" alt="Design">
                         <h2>Content creation and visual elements</h2>
                         <p>With the site architecture and some content in place, we can start working on the visual design of your website. I'll work my magic, constantly playing around with different design styles, elements, colors, and typography to bring your website to life. </p>
 
                         <p>I will remain in back and forth contact during this phase to make sure you get a website that you love! </p>
                     </div>
                     <div id="tab3" class="tab">
-                        <img src="img/development.png" alt="Development">
+                        <img src="/img/development.png" alt="Development">
                         <h2>Responsive coding and testing</h2>
                         <p>By now, you've got all your pages designed and approved, so it's time to make it all work. I'll begin by coding the website responsively, making sure everything works correctly on a variety of devices.</p>
 
                         <p>Than I test your website on a desktop, tablet, and mobile device by browsing manually to identify any problems, whether it's user experience issues or something as simple as a broken link. I'll than send it to you for review and if you spot anything out of place I'll get it fixed up.</p>
                     </div>
                     <div id="tab4" class="tab">
-                        <img src="img/launch.png" alt="Launch">
+                        <img src="/img/launch.png" alt="Launch">
                         <h2>Launch!</h2>
                         <p>Now it’s time for everyone’s favorite part of the web design process: When everything has been thoroughly tested, and you’re happy with the site, it’s time to launch. Unless agreed upon prior you will be editing the content yourself, but I'm happy to help if you run into any issues.</p>
 
@@ -99,21 +99,21 @@ import WorkPreview from '../components/work-preview.astro';
                 
                 <div class="core-values">
                     <div class="one-third">
-                        <img src="img/communication.png" alt="" class="img">
-                        <img src="img/communicationhover.png" alt="" class="hoverimg">
+                        <img src="/img/communication.png" alt="" class="img">
+                        <img src="/img/communicationhover.png" alt="" class="hoverimg">
                         
                         <h5>Communication</h5>
                         <p>Quick response and regular communication is the key for success.</p>
                     </div>
                     <div class="one-third">
-                        <img src="img/honesty.png" alt="" class="img">
-                        <img src="img/honestyhover.png" alt="" class="hoverimg">
+                        <img src="/img/honesty.png" alt="" class="img">
+                        <img src="/img/honestyhover.png" alt="" class="hoverimg">
                         <h5>Honesty</h5>
                         <p>We'll be honest with our skills, deadlines, and pricing.</p>
                     </div>
                     <div class="one-third">
-                        <img src="img/trustworthy.png" alt="" class="img">
-                        <img src="img/trustworthyhover.png" alt="" class="hoverimg">
+                        <img src="/img/trustworthy.png" alt="" class="img">
+                        <img src="/img/trustworthyhover.png" alt="" class="hoverimg">
                         <h5>Trustworthy</h5>
                         <p>You can trust me to deliver your project on time, always.</p>
                     </div>
