--- a/src/pages/ggservers.astro
+++ b/src/pages/ggservers.astro
@@ -9,9 +9,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#212538;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/ggserver/logo.png" alt="GG Servers">
+                <img src="/img/ggserver/logo.png" alt="GG Servers">
                 <h1>The foundation for a GG Minecraft provider.</h1>
-                <img src="img/ggserver/threepreviews.png" alt="" class="hero-center-img">
+                <img src="/img/ggserver/threepreviews.png" alt="" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -109,35 +109,35 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/ggserver/two-big.png" class="fancybox"><img src="img/ggserver/two.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/two-big.png" class="fancybox"><img src="/img/ggserver/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/ggserver/one-big.png" class="fancybox"><img src="img/ggserver/one.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/one-big.png" class="fancybox"><img src="/img/ggserver/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/ggserver/three-big.png" class="fancybox"><img src="img/ggserver/three.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/three-big.png" class="fancybox"><img src="/img/ggserver/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/ggserver/four-big.png" class="fancybox"><img src="img/ggserver/four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/four-big.png" class="fancybox"><img src="/img/ggserver/four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/ggserver/five-big.png" class="fancybox"><img src="img/ggserver/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/five-big.png" class="fancybox"><img src="/img/ggserver/five-big.png"></a>
             </div>
 
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/ggserver/six-big.png" class="fancybox"><img src="img/ggserver/six-big.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/six-big.png" class="fancybox"><img src="/img/ggserver/six-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/ggserver/seven-big.png" class="fancybox"><img src="img/ggserver/seven-big.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/seven-big.png" class="fancybox"><img src="/img/ggserver/seven-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/ggserver/eight-big.png" class="fancybox"><img src="img/ggserver/eight-big.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/eight-big.png" class="fancybox"><img src="/img/ggserver/eight-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/ggserver/nine-big.png" class="fancybox"><img src="img/ggserver/nine-big.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/nine-big.png" class="fancybox"><img src="/img/ggserver/nine-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/ggserver/ten-big.png" class="fancybox"><img src="img/ggserver/ten-big.png"></a>
+                <a data-fancybox="gallery" href="/img/ggserver/ten-big.png" class="fancybox"><img src="/img/ggserver/ten-big.png"></a>
             </div>
 
             <div class="clearfix"></div>
@@ -152,7 +152,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="streamlinebox one-half left">
         <WorkPreview
             title="The perfect combination of gaming and functionality"
-            imglink="img/streamline/logo.svg"
+            imglink="/img/streamline/logo.svg"
             link="streamline"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
@@ -161,7 +161,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="shockbox one-half right">
         <WorkPreview
             title="A website designed to shock and awe"
-            imglink="img/shockhosting/logo.png"
+            imglink="/img/shockhosting/logo.png"
             link="shockhosting"
             services="WEB DESIGN / CODING"
             type="Hosting Provider"
