--- a/src/pages/hosthavoc.astro
+++ b/src/pages/hosthavoc.astro
@@ -10,9 +10,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#0096FF;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/hosthavoc/logo.svg" alt="Host Havoc">
+                <img src="/img/hosthavoc/logo.svg" alt="Host Havoc">
                 <h1>Wrecking Havoc with this website design!</h1>
-                <img src="img/hosthavoc/threepreviews.png" alt="" class="hero-center-img">
+                <img src="/img/hosthavoc/threepreviews.png" alt="" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -108,29 +108,29 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/hosthavoc/two-big.png" class="fancybox"><img src="img/hosthavoc/two.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/two-big.png" class="fancybox"><img src="/img/hosthavoc/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/hosthavoc/one-big.png" class="fancybox"><img src="img/hosthavoc/one.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/one-big.png" class="fancybox"><img src="/img/hosthavoc/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/hosthavoc/three-big.png" class="fancybox"><img src="img/hosthavoc/three.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/three-big.png" class="fancybox"><img src="/img/hosthavoc/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/hosthavoc/four-big.png" class="fancybox"><img src="img/hosthavoc/four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/four-big.png" class="fancybox"><img src="/img/hosthavoc/four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/hosthavoc/five-big.png" class="fancybox"><img src="img/hosthavoc/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/five-big.png" class="fancybox"><img src="/img/hosthavoc/five-big.png"></a>
             </div>
 
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/hosthavoc/six-big.png" class="fancybox"><img src="img/hosthavoc/six-big.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/six-big.png" class="fancybox"><img src="/img/hosthavoc/six-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/hosthavoc/seven-big.png" class="fancybox"><img src="img/hosthavoc/seven-big.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/seven-big.png" class="fancybox"><img src="/img/hosthavoc/seven-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/hosthavoc/eight-big.png" class="fancybox"><img src="img/hosthavoc/eight-big.png"></a>
+                <a data-fancybox="gallery" href="/img/hosthavoc/eight-big.png" class="fancybox"><img src="/img/hosthavoc/eight-big.png"></a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -143,7 +143,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="jaxnap one-half left">
 				<WorkPreview
 					title="A realism design for a real cool company"
-					imglink="img/jaxnap/logo.png"
+					imglink="/img/jaxnap/logo.png"
 					link="jaxnap"
 					services="WEB DESIGN / CODING"
 					type="Datacenter"
@@ -152,7 +152,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="pronotary one-half right has-new">
 				<WorkPreview
 					title="Seamless Notarization. Anytime, Anywhere."
-					imglink="img/pronotary/logo.svg"
+					imglink="/img/pronotary/logo.svg"
 					link="pronotary"
 					services="WEB DESIGN / CODING"
 					type="Software Company"
