--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col hosthavoc has-new">
 				<WorkPreview
 					title="Wrecking Havoc with this website design"
-					imglink="img/hosthavoc/logo.svg"
+					imglink="/img/hosthavoc/logo.svg"
 					link="hosthavoc"
 					services="WEB DESIGN / CODING"
 					type="Game Server Provider"
@@ -27,7 +27,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col pronotary has-new">
 				<WorkPreview
 					title="Seamless Notarization. Anytime, Anywhere."
-					imglink="img/pronotary/logo.svg"
+					imglink="/img/pronotary/logo.svg"
 					link="pronotary"
 					services="WEB DESIGN / CODING"
 					type="Software Company"
@@ -36,7 +36,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col moonqubebox has-new">
 				<WorkPreview
 					title="Affordable cloud hosting to the moooon"
-					imglink="img/moonqube/logo.svg"
+					imglink="/img/moonqube/logo.svg"
 					link="moonqube"
 					services="WEB DESIGN / CODING / DEV"
 					type="Cloud Provider"
@@ -45,7 +45,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col streamlinebox has-new">
 				<WorkPreview
 					title="The perfect combination of gaming and functionality"
-					imglink="img/streamline/logo.svg"
+					imglink="/img/streamline/logo.svg"
 					link="streamline"
 					services="WEB DESIGN / CODING"
 					type="Game Server Provider"
@@ -54,7 +54,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col ggserverbox">
 				<WorkPreview
 					title="The foundation for a GG Minecraft provider"
-					imglink="img/ggserver/logo.png"
+					imglink="/img/ggserver/logo.png"
 					link="ggservers"
 					services="WEB DESIGN / CODING"
 					type="Game Server Provider"
@@ -63,7 +63,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col shockbox">
 				<WorkPreview
 					title="A website designed to shock and awe"
-					imglink="img/shockhosting/logo.png"
+					imglink="/img/shockhosting/logo.png"
 					link="shockhosting"
 					services="WEB DESIGN / CODING"
 					type="Hosting Provider"
@@ -72,7 +72,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col oasisbox">
 				<WorkPreview
 					title="An oasis of design for a game server provider"
-					imglink="img/oasis/logo.png"
+					imglink="/img/oasis/logo.png"
 					link="oasis"
 					services="WEB DESIGN / CODING"
 					type="Game Server Provider"
@@ -81,7 +81,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col speedybox">
 				<WorkPreview
 					title="Designed for speed, because of course it is"
-					imglink="img/speedy/logo.png"
+					imglink="/img/speedy/logo.png"
 					link="speedypage"
 					services="WEB DESIGN / CODING"
 					type="Hosting Provider"
@@ -90,7 +90,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col hostmantisbox">
 				<WorkPreview
 					title="If the mantis don't getcha, the design will"
-					imglink="img/mantis/logo.png"
+					imglink="/img/mantis/logo.png"
 					link="hostmantis"
 					services="WEB DESIGN / CODING"
 					type="Hosting Provider"
@@ -99,7 +99,7 @@ import WorkPreview from '../components/work-preview.astro';
 			<div class="col jaxnap">
 				<WorkPreview
 					title="A realism design for a real cool company"
-					imglink="img/jaxnap/logo.png"
+					imglink="/img/jaxnap/logo.png"
 					link="jaxnap"
 					services="WEB DESIGN / CODING"
 					type="Datacenter"
