--- a/src/pages/moonqube.astro
+++ b/src/pages/moonqube.astro
@@ -8,9 +8,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#4A33A2;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/moonqube/logo.svg" alt="Moon Qube">
+                <img src="/img/moonqube/logo.svg" alt="Moon Qube">
                 <h1>Affordable cloud hosting to the moooon!</h1>
-                <img src="img/moonqube/threepreviews.png" alt="" class="hero-center-img">
+                <img src="/img/moonqube/threepreviews.png" alt="" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -90,29 +90,29 @@ import WorkPreview from '../components/work-preview.astro';
 					I decided on <a href="https://fontawesome.com/v6/" target="_blank">Font Awesome v6</a> for this project, along with these other icons:
                   </p>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-1.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-1.svg" style="height:88px;" />
                   </div>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-2.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-2.svg" style="height:88px;" />
                   </div>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-3.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-3.svg" style="height:88px;" />
                   </div>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-4.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-4.svg" style="height:88px;" />
                   </div>
                   <div class="clearicon"></div>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-5.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-5.svg" style="height:88px;" />
                   </div>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-6.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-6.svg" style="height:88px;" />
                   </div>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-7.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-7.svg" style="height:88px;" />
                   </div>
                   <div class="one-fourth">
-                    <img src="img/moonqube/icon-8.svg" style="height:88px;" />
+                    <img src="/img/moonqube/icon-8.svg" style="height:88px;" />
                   </div>
                 </div>
             </div>
@@ -131,29 +131,29 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/moonqube/two-big.png" class="fancybox"><img src="img/moonqube/two.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/two-big.png" class="fancybox"><img src="/img/moonqube/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/moonqube/one-big.png" class="fancybox"><img src="img/moonqube/one.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/one-big.png" class="fancybox"><img src="/img/moonqube/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/moonqube/three-big.png" class="fancybox"><img src="img/moonqube/three.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/three-big.png" class="fancybox"><img src="/img/moonqube/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/moonqube/four-big.png" class="fancybox"><img src="img/moonqube/four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/four-big.png" class="fancybox"><img src="/img/moonqube/four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/moonqube/five-big.png" class="fancybox"><img src="img/moonqube/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/five-big.png" class="fancybox"><img src="/img/moonqube/five-big.png"></a>
             </div>
 
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/moonqube/six-big.png" class="fancybox"><img src="img/moonqube/six-big.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/six-big.png" class="fancybox"><img src="/img/moonqube/six-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/moonqube/seven-big.png" class="fancybox"><img src="img/moonqube/seven-big.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/seven-big.png" class="fancybox"><img src="/img/moonqube/seven-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/moonqube/eight-big.png" class="fancybox"><img src="img/moonqube/eight-big.png"></a>
+                <a data-fancybox="gallery" href="/img/moonqube/eight-big.png" class="fancybox"><img src="/img/moonqube/eight-big.png"></a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -165,7 +165,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="pronotary one-half left has-new">
         <WorkPreview
             title="Seamless Notarization. Anytime, Anywhere."
-            imglink="img/pronotary/logo.svg"
+            imglink="/img/pronotary/logo.svg"
             link="pronotary"
             services="WEB DESIGN / CODING"
             type="Software Company"
@@ -174,7 +174,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="streamlinebox one-half right has-new">
         <WorkPreview
             title="The perfect combination of gaming and functionality"
-            imglink="img/streamline/logo.svg"
+            imglink="/img/streamline/logo.svg"
             link="streamline"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
