--- a/src/pages/oasis.astro
+++ b/src/pages/oasis.astro
@@ -11,9 +11,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#f33900;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/oasis/logo.png" alt="Oasis Hosting">
+                <img src="/img/oasis/logo.png" alt="Oasis Hosting">
                 <h1>An oasis of design for a game server provider</h1>
-                <img src="img/oasis/threepreviews.png" alt="" class="hero-center-img">
+                <img src="/img/oasis/threepreviews.png" alt="" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -107,19 +107,19 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/oasis/two-big.png" class="fancybox"><img src="img/oasis/two.png"></a>
+                <a data-fancybox="gallery" href="/img/oasis/two-big.png" class="fancybox"><img src="/img/oasis/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/oasis/one-big.png" class="fancybox"><img src="img/oasis/one.png"></a>
+                <a data-fancybox="gallery" href="/img/oasis/one-big.png" class="fancybox"><img src="/img/oasis/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/oasis/three-big.png" class="fancybox"><img src="img/oasis/three.png"></a>
+                <a data-fancybox="gallery" href="/img/oasis/three-big.png" class="fancybox"><img src="/img/oasis/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/oasis/four-big.png" class="fancybox"><img src="img/oasis/four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/oasis/four-big.png" class="fancybox"><img src="/img/oasis/four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/oasis/five-big.png" class="fancybox"><img src="img/oasis/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/oasis/five-big.png" class="fancybox"><img src="/img/oasis/five-big.png"></a>
             </div>
 
             <div class="clearfix"></div>
@@ -132,7 +132,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="shockbox one-half left">
             <WorkPreview
                 title="A website designed to shock and awe"
-                imglink="img/shockhosting/logo.png"
+                imglink="/img/shockhosting/logo.png"
                 link="shockhosting"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
@@ -141,7 +141,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="speedybox one-half right">
             <WorkPreview
                 title="Designed for speed, because of course it is"
-                imglink="img/speedy/logo.png"
+                imglink="/img/speedy/logo.png"
                 link="speedypage"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
