--- a/src/pages/pronotary.astro
+++ b/src/pages/pronotary.astro
@@ -8,9 +8,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#FF6C2D;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/pronotary/logo.svg" alt="Pro Notary">
+                <img src="/img/pronotary/logo.svg" alt="Pro Notary">
                 <h1>Seamless Notarization. Anytime, Anywhere.</h1>
-                <img src="img/pronotary/threepreviews.png" alt="" class="hero-center-img">
+                <img src="/img/pronotary/threepreviews.png" alt="" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -104,23 +104,23 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/pronotary/two-big.png" class="fancybox"><img src="img/pronotary/two.png"></a>
+                <a data-fancybox="gallery" href="/img/pronotary/two-big.png" class="fancybox"><img src="/img/pronotary/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/pronotary/one-big.png" class="fancybox"><img src="img/pronotary/one.png"></a>
+                <a data-fancybox="gallery" href="/img/pronotary/one-big.png" class="fancybox"><img src="/img/pronotary/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/pronotary/three-big.png" class="fancybox"><img src="img/pronotary/three.png"></a>
+                <a data-fancybox="gallery" href="/img/pronotary/three-big.png" class="fancybox"><img src="/img/pronotary/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/pronotary/four-big.png" class="fancybox"><img src="img/pronotary/four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/pronotary/four-big.png" class="fancybox"><img src="/img/pronotary/four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/pronotary/five-big.png" class="fancybox"><img src="img/pronotary/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/pronotary/five-big.png" class="fancybox"><img src="/img/pronotary/five-big.png"></a>
             </div>
 
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/pronotary/six-big.png" class="fancybox"><img src="img/pronotary/six-big.png"></a>
+                <a data-fancybox="gallery" href="/img/pronotary/six-big.png" class="fancybox"><img src="/img/pronotary/six-big.png"></a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -133,7 +133,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="hosthavoc has-new one-half left">
         <WorkPreview
             title="Wrecking Havoc with this website design"
-            imglink="img/hosthavoc/logo.svg"
+            imglink="/img/hosthavoc/logo.svg"
             link="hosthavoc"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
@@ -142,7 +142,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="moonqubebox has-new one-half right">
         <WorkPreview
             title="Affordable cloud hosting to the moooon"
-            imglink="img/moonqube/logo.svg"
+            imglink="/img/moonqube/logo.svg"
             link="moonqube"
             services="WEB DESIGN / CODING / DEV"
             type="Cloud Provider"
