--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -22,7 +22,7 @@ import WorkPreview from '../components/work-preview.astro';
                         Website Design 
                     </div>
                     <div class="right rotate">
-                        <img src="img/plus.png" alt="" />
+                        <img src="/img/plus.png" alt="" />
                     </div>
                     <div class="left description">
                         <p>
@@ -48,7 +48,7 @@ import WorkPreview from '../components/work-preview.astro';
                         Responsive Coding
                     </div>
                     <div class="right rotate">
-                        <img src="img/plus.png" alt="" />
+                        <img src="/img/plus.png" alt="" />
                     </div>
                     <div class="left description">
                         <p>
@@ -76,7 +76,7 @@ import WorkPreview from '../components/work-preview.astro';
                         eCommerce
                     </div>
                     <div class="right rotate">
-                        <img src="img/plus.png" alt="" />
+                        <img src="/img/plus.png" alt="" />
                     </div>
                     <div class="left description">
                         <p>
@@ -103,7 +103,7 @@ import WorkPreview from '../components/work-preview.astro';
                         Script Integrations
                     </div>
                     <div class="right rotate">
-                        <img src="img/plus.png" alt="" />
+                        <img src="/img/plus.png" alt="" />
                     </div>
                     <div class="left description">
                         <p>
