--- a/src/pages/shockhosting.astro
+++ b/src/pages/shockhosting.astro
@@ -10,9 +10,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#ea1a1a;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/shockhosting/logo.png" alt="Shock Hosting Web Design">
+                <img src="/img/shockhosting/logo.png" alt="Shock Hosting Web Design">
                 <h1>A website designed to shock and awe</h1>
-                <img src="img/shockhosting/threepreviews.png" alt="Shock Hosting Web Designer" class="hero-center-img">
+                <img src="/img/shockhosting/threepreviews.png" alt="Shock Hosting Web Designer" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -88,43 +88,43 @@ import WorkPreview from '../components/work-preview.astro';
 
                 <div class="tab-pane" id="icons">
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-1.png" alt="">
+                        <img src="/img/shockhosting/icon-1.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-2.png" alt="">
+                        <img src="/img/shockhosting/icon-2.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-3.png" alt="">
+                        <img src="/img/shockhosting/icon-3.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-4.png" alt="">
+                        <img src="/img/shockhosting/icon-4.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-5.png" alt="">
+                        <img src="/img/shockhosting/icon-5.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-6.png" alt="">
+                        <img src="/img/shockhosting/icon-6.png" alt="">
                     </div>
 
                     <div class="clearicon"></div>
 
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-7.png" alt="">
+                        <img src="/img/shockhosting/icon-7.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-8.png" alt="">
+                        <img src="/img/shockhosting/icon-8.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-9.png" alt="">
+                        <img src="/img/shockhosting/icon-9.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-10.png" alt="">
+                        <img src="/img/shockhosting/icon-10.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-11.png" alt="">
+                        <img src="/img/shockhosting/icon-11.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/shockhosting/icon-12.png" alt="">
+                        <img src="/img/shockhosting/icon-12.png" alt="">
                     </div>
                     <div class="clear"></div>
 
@@ -144,19 +144,19 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/shockhosting/sh-one-big.png" class="fancybox"><img src="img/shockhosting/sh-one.png"></a>
+                <a data-fancybox="gallery" href="/img/shockhosting/sh-one-big.png" class="fancybox"><img src="/img/shockhosting/sh-one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/shockhosting/sh-two-big.png" class="fancybox"><img src="img/shockhosting/sh-two.png"></a>
+                <a data-fancybox="gallery" href="/img/shockhosting/sh-two-big.png" class="fancybox"><img src="/img/shockhosting/sh-two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/shockhosting/sh-three-big.png" class="fancybox"><img src="img/shockhosting/sh-three.png"></a>
+                <a data-fancybox="gallery" href="/img/shockhosting/sh-three-big.png" class="fancybox"><img src="/img/shockhosting/sh-three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/shockhosting/sh-four-big.png" class="fancybox"><img src="img/shockhosting/sh-four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/shockhosting/sh-four-big.png" class="fancybox"><img src="/img/shockhosting/sh-four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/shockhosting/sh-five-big.png" class="fancybox"><img src="img/shockhosting/sh-five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/shockhosting/sh-five-big.png" class="fancybox"><img src="/img/shockhosting/sh-five-big.png"></a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -170,7 +170,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="ggserverbox one-half left">
             <WorkPreview
                 title="The foundation for a GG Minecraft provider"
-                imglink="img/ggserver/logo.png"
+                imglink="/img/ggserver/logo.png"
                 link="ggservers"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
@@ -179,7 +179,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="oasisbox one-half right">
             <WorkPreview
                 title="An oasis of design for a game server provider"
-                imglink="img/oasis/logo.png"
+                imglink="/img/oasis/logo.png"
                 link="oasis"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
