--- a/src/pages/speedypage.astro
+++ b/src/pages/speedypage.astro
@@ -10,9 +10,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#27AAFE;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/speedy/logo.png" alt="Speedy Page Web Design">
+                <img src="/img/speedy/logo.png" alt="Speedy Page Web Design">
                 <h1>Designed for speed, because of course it is</h1>
-                <img src="img/speedy/threepreviews.png" alt="Host Havoc Preview" class="hero-center-img">
+                <img src="/img/speedy/threepreviews.png" alt="Host Havoc Preview" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -87,43 +87,43 @@ import WorkPreview from '../components/work-preview.astro';
 
                 <div class="tab-pane" id="icons">
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-1.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-1.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-2.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-2.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-3.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-3.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-4.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-4.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-5.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-5.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-6.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-6.svg" style="height:68px;" alt="">
                     </div>
 
                     <div class="clearicon"></div>
 
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-7.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-7.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-8.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-8.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-9.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-9.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-10.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-10.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-11.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-11.svg" style="height:68px;" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/speedy/icon-12.svg" style="height:68px;" alt="">
+                        <img src="/img/speedy/icon-12.svg" style="height:68px;" alt="">
                     </div>
                     <div class="clear"></div>
 
@@ -142,19 +142,19 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/speedy/two-big.png" class="fancybox" srcset=“img/speedy/two-big@2x.png 2x”><img src="img/speedy/two.png"></a>
+                <a data-fancybox="gallery" href="/img/speedy/two-big.png" class="fancybox" srcset=“/img/speedy/two-big@2x.png 2x”><img src="/img/speedy/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/speedy/one-big.png" class="fancybox" srcset=“img/speedy/one-big@2x.png 2x”><img src="img/speedy/one.png"></a>
+                <a data-fancybox="gallery" href="/img/speedy/one-big.png" class="fancybox" srcset=“/img/speedy/one-big@2x.png 2x”><img src="/img/speedy/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/speedy/three-big.png" class="fancybox" srcset=“img/speedy/three-big@2x.png 2x”><img src="img/speedy/three.png"></a>
+                <a data-fancybox="gallery" href="/img/speedy/three-big.png" class="fancybox" srcset=“/img/speedy/three-big@2x.png 2x”><img src="/img/speedy/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/speedy/four-big.png" class="fancybox" srcset=“img/speedy/four-big@2x.png 2x”><img src="img/speedy/four-big.png" srcset=“image_2x.jpg 2x”></a>
+                <a data-fancybox="gallery" href="/img/speedy/four-big.png" class="fancybox" srcset=“/img/speedy/four-big@2x.png 2x”><img src="/img/speedy/four-big.png" srcset=“image_2x.jpg 2x”></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/speedy/five-big.png" class="fancybox" srcset=“img/speedy/five-big@2x.png 2x”><img src="img/speedy/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/speedy/five-big.png" class="fancybox" srcset=“/img/speedy/five-big@2x.png 2x”><img src="/img/speedy/five-big.png"></a>
             </div>
 
             <div class="clearfix"></div>
@@ -166,7 +166,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="oasisbox one-half left">
             <WorkPreview
                 title="An oasis of design for a game server provider"
-                imglink="img/oasis/logo.png"
+                imglink="/img/oasis/logo.png"
                 link="oasis"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
@@ -175,7 +175,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="hostmantisbox one-half right">
             <WorkPreview
                 title="If the mantis don't getcha, the design will"
-                imglink="img/mantis/logo.png"
+                imglink="/img/mantis/logo.png"
                 link="hostmantis"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
