--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -21,14 +21,14 @@ import ContactLayout from '../layouts/ContactLayout.astro';
 
           <div class="one-third" style="margin-top:160px;">
               <ul>
-                  <li><img src="img/email.png" alt="Email" width="48" height="48">
+                  <li><img src="/img/email.png" alt="Email" width="48" height="48">
                       <h4><span>Direct Email</span><a href="#">korey@varcoe.net</a></h4>
                   </li>
-                  <li><img src="img/skype.png" alt="Skype" width="48" height="48">
+                  <li><img src="/img/skype.png" alt="Skype" width="48" height="48">
                       <h4><span>Skype</span><a href="skype:varcoedesign?chat">varcoedesign</a></h4>
                   </li>
 
-                  <li><img src="img/discord.png" alt="Discord" width="48" height="48">
+                  <li><img src="/img/discord.png" alt="Discord" width="48" height="48">
                     <h4><span>Discord</span><a href="javascript:void(0)">varcoenet</a></h4>
                   </li>
 
