--- a/src/pages/hostmantis.astro
+++ b/src/pages/hostmantis.astro
@@ -10,9 +10,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#f9f8f2;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/mantis/logo.png" alt="Host Mantis Web Design">
+                <img src="/img/mantis/logo.png" alt="Host Mantis Web Design">
                 <h1 style="color:#1e1f24;">If the mantis don't getcha, the design will</h1>
-                <img src="img/mantis/threepreviews.png" alt="mantis web deisgner" class="hero-center-img">
+                <img src="/img/mantis/threepreviews.png" alt="mantis web deisgner" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -88,43 +88,43 @@ import WorkPreview from '../components/work-preview.astro';
 
                 <div class="tab-pane" id="icons">
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-1.png" alt="">
+                        <img src="/img/mantis/icon-1.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-2.png" alt="">
+                        <img src="/img/mantis/icon-2.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-3.png" alt="">
+                        <img src="/img/mantis/icon-3.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-4.png" alt="">
+                        <img src="/img/mantis/icon-4.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-5.png" alt="">
+                        <img src="/img/mantis/icon-5.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-6.png" alt="">
+                        <img src="/img/mantis/icon-6.png" alt="">
                     </div>
 
                     <div class="clearicon"></div>
 
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-7.png" alt="">
+                        <img src="/img/mantis/icon-7.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-8.png" alt="">
+                        <img src="/img/mantis/icon-8.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-9.png" alt="">
+                        <img src="/img/mantis/icon-9.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-10.png" alt="">
+                        <img src="/img/mantis/icon-10.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-11.png" alt="">
+                        <img src="/img/mantis/icon-11.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/mantis/icon-12.png" alt="">
+                        <img src="/img/mantis/icon-12.png" alt="">
                     </div>
 
                 </div>
@@ -143,19 +143,19 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/mantis/two-big.png" class="fancybox"><img src="img/mantis/two.png"></a>
+                <a data-fancybox="gallery" href="/img/mantis/two-big.png" class="fancybox"><img src="/img/mantis/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/mantis/one-big.png" class="fancybox"><img src="img/mantis/one.png"></a>
+                <a data-fancybox="gallery" href="/img/mantis/one-big.png" class="fancybox"><img src="/img/mantis/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/mantis/three-big.png" class="fancybox"><img src="img/mantis/three.png"></a>
+                <a data-fancybox="gallery" href="/img/mantis/three-big.png" class="fancybox"><img src="/img/mantis/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/mantis/four-big.png" class="fancybox"><img src="img/mantis/four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/mantis/four-big.png" class="fancybox"><img src="/img/mantis/four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/mantis/four-big.png" class="fancybox"><img src="img/mantis/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/mantis/four-big.png" class="fancybox"><img src="/img/mantis/five-big.png"></a>
             </div>
 
 
@@ -168,7 +168,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="speedybox one-half left">
             <WorkPreview
                 title="Designed for speed, because of course it is"
-                imglink="img/speedy/logo.png"
+                imglink="/img/speedy/logo.png"
                 link="speedypage"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
@@ -177,7 +177,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="jaxnap one-half right">
             <WorkPreview
                 title="A realism design for a real cool company"
-                imglink="img/jaxnap/logo.png"
+                imglink="/img/jaxnap/logo.png"
                 link="jaxnap"
                 services="WEB DESIGN / CODING"
                 type="Datacenter"
