--- a/src/pages/jaxnap.astro
+++ b/src/pages/jaxnap.astro
@@ -11,9 +11,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#202327;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/jaxnap/logo.png" alt="JAXNAP">
+                <img src="/img/jaxnap/logo.png" alt="JAXNAP">
                 <h1>A realism design for a real cool company.</h1>
-                <img src="img/jaxnap/threepreviews.png" alt="" class="hero-center-img">
+                <img src="/img/jaxnap/threepreviews.png" alt="" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -90,43 +90,43 @@ import WorkPreview from '../components/work-preview.astro';
 
                 <div class="tab-pane" id="icons">
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-1.png" alt="">
+                        <img src="/img/jaxnap/icon-1.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-2.png" alt="">
+                        <img src="/img/jaxnap/icon-2.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-3.png" alt="">
+                        <img src="/img/jaxnap/icon-3.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-4.png" alt="">
+                        <img src="/img/jaxnap/icon-4.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-5.png" alt="">
+                        <img src="/img/jaxnap/icon-5.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-6.png" alt="">
+                        <img src="/img/jaxnap/icon-6.png" alt="">
                     </div>
 
                     <div class="clearicon"></div>
 
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-7.png" alt="">
+                        <img src="/img/jaxnap/icon-7.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-8.png" alt="">
+                        <img src="/img/jaxnap/icon-8.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-9.png" alt="">
+                        <img src="/img/jaxnap/icon-9.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-10.png" alt="">
+                        <img src="/img/jaxnap/icon-10.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-11.png" alt="">
+                        <img src="/img/jaxnap/icon-11.png" alt="">
                     </div>
                     <div class="one-sixth">
-                        <img src="img/jaxnap/icon-12.png" alt="">
+                        <img src="/img/jaxnap/icon-12.png" alt="">
                     </div>
 
                 </div>
@@ -145,23 +145,23 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/jaxnap/jaxnap-one-big.png" class="fancybox"><img src="img/jaxnap/jaxnap-one.png"></a>
+                <a data-fancybox="gallery" href="/img/jaxnap/jaxnap-one-big.png" class="fancybox"><img src="/img/jaxnap/jaxnap-one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/jaxnap/jaxnap-two-big.png" class="fancybox"><img src="img/jaxnap/jaxnap-two.png"></a>
+                <a data-fancybox="gallery" href="/img/jaxnap/jaxnap-two-big.png" class="fancybox"><img src="/img/jaxnap/jaxnap-two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/jaxnap/jaxnap-three-big.png" class="fancybox"><img src="img/jaxnap/jaxnap-three.png"></a>
+                <a data-fancybox="gallery" href="/img/jaxnap/jaxnap-three-big.png" class="fancybox"><img src="/img/jaxnap/jaxnap-three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/jaxnap/jaxnap-four-big.png" class="fancybox"><img src="img/jaxnap/jaxnap-four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/jaxnap/jaxnap-four-big.png" class="fancybox"><img src="/img/jaxnap/jaxnap-four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/jaxnap/jaxnap-five-big.png" class="fancybox"><img src="img/jaxnap/jaxnap-five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/jaxnap/jaxnap-five-big.png" class="fancybox"><img src="/img/jaxnap/jaxnap-five-big.png"></a>
             </div>
 
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/jaxnap/jaxnap-six-big.png" class="fancybox"><img src="img/jaxnap/jaxnap-six-big.png"></a>
+                <a data-fancybox="gallery" href="/img/jaxnap/jaxnap-six-big.png" class="fancybox"><img src="/img/jaxnap/jaxnap-six-big.png"></a>
             </div>
 
             <div class="clearfix"></div>
@@ -175,7 +175,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="hostmantisbox one-half left">
             <WorkPreview
                 title="If the mantis don't getcha, the design will"
-                imglink="img/mantis/logo.png"
+                imglink="/img/mantis/logo.png"
                 link="hostmantis"
                 services="WEB DESIGN / CODING"
                 type="Hosting Provider"
@@ -184,7 +184,7 @@ import WorkPreview from '../components/work-preview.astro';
         <div class="hosthavoc one-half right">
             <WorkPreview
                 title="Wrecking Havoc with this website design"
-                imglink="img/hosthavoc/logo.svg"
+                imglink="/img/hosthavoc/logo.svg"
                 link="hosthavoc"
                 services="WEB DESIGN / CODING"
                 type="Game Server Provider"
