--- a/src/pages/streamline.astro
+++ b/src/pages/streamline.astro
@@ -8,9 +8,9 @@ import WorkPreview from '../components/work-preview.astro';
     <section class="casestudy" style="background:#8ABB48;">
         <div class="container">
             <div class="hero-center">
-                <img src="img/streamline/logo.svg" alt="Streamline Servers">
+                <img src="/img/streamline/logo.svg" alt="Streamline Servers">
                 <h1>The perfect combination of gaming and functionality.</h1>
-                <img src="img/streamline/threepreviews.png" alt="" class="hero-center-img">
+                <img src="/img/streamline/threepreviews.png" alt="" class="hero-center-img">
             </div>
             <div class="clearfix"></div>
         </div>
@@ -102,23 +102,23 @@ import WorkPreview from '../components/work-preview.astro';
             <div class="clickanywhere">Click any preview below to view in full<br>screen and additional pages</div>
 
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/streamline/two-big.png" class="fancybox"><img src="img/streamline/two.png"></a>
+                <a data-fancybox="gallery" href="/img/streamline/two-big.png" class="fancybox"><img src="/img/streamline/two.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/streamline/one-big.png" class="fancybox"><img src="img/streamline/one.png"></a>
+                <a data-fancybox="gallery" href="/img/streamline/one-big.png" class="fancybox"><img src="/img/streamline/one.png"></a>
             </div>
             <div class="one-third">
-                <a data-fancybox="gallery" href="img/streamline/three-big.png" class="fancybox"><img src="img/streamline/three.png"></a>
+                <a data-fancybox="gallery" href="/img/streamline/three-big.png" class="fancybox"><img src="/img/streamline/three.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/streamline/four-big.png" class="fancybox"><img src="img/streamline/four-big.png"></a>
+                <a data-fancybox="gallery" href="/img/streamline/four-big.png" class="fancybox"><img src="/img/streamline/four-big.png"></a>
             </div>
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/streamline/five-big.png" class="fancybox"><img src="img/streamline/five-big.png"></a>
+                <a data-fancybox="gallery" href="/img/streamline/five-big.png" class="fancybox"><img src="/img/streamline/five-big.png"></a>
             </div>
 
             <div class="one-third" style="display:none;">
-                <a data-fancybox="gallery" href="img/streamline/six-big.png" class="fancybox"><img src="img/streamline/six-big.png"></a>
+                <a data-fancybox="gallery" href="/img/streamline/six-big.png" class="fancybox"><img src="/img/streamline/six-big.png"></a>
             </div>
 
             <div class="clearfix"></div>
@@ -133,7 +133,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="moonqubebox one-half left has-new">
         <WorkPreview
             title="Affordable cloud hosting to the moooon"
-            imglink="img/moonqube/logo.svg"
+            imglink="/img/moonqube/logo.svg"
             link="moonqube"
             services="WEB DESIGN / CODING / DEV"
             type="Cloud Provider"
@@ -142,7 +142,7 @@ import WorkPreview from '../components/work-preview.astro';
 	<div class="ggserverbox one-half right">
         <WorkPreview
             title="The foundation for a GG Minecraft provider"
-            imglink="img/ggserver/logo.png"
+            imglink="/img/ggserver/logo.png"
             link="ggservers"
             services="WEB DESIGN / CODING"
             type="Game Server Provider"
